[gd_scene load_steps=5 format=3 uid="uid://bu648cdlaide7"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_2mgxj"]
[ext_resource type="Texture2D" uid="uid://d3aef1ev1btxa" path="res://icon.svg" id="2_7tgkg"]
[ext_resource type="Texture2D" uid="uid://ciikaw15ty0bh" path="res://resources/background/sky.png" id="2_pfige"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_onu3h"]
texture = ExtResource("2_pfige")

[node name="generalUI" type="Node2D" node_paths=PackedStringArray("pause_menu", "game_ui", "controls_menu", "options_menu", "home_menu", "home_controls_menu")]
script = ExtResource("1_2mgxj")
pause_menu = NodePath("PauseMenuScreen")
game_ui = NodePath("inGameUI")
controls_menu = NodePath("ControlsMenuContainer")
options_menu = NodePath("OptionMenuContainer")
home_menu = NodePath("HomeMenuContainer")
home_controls_menu = NodePath("HomeToControlsMenuContainer")

[node name="HomeMenuContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 1281.0
offset_bottom = 721.0

[node name="Panel" type="Panel" parent="HomeMenuContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_onu3h")

[node name="ContentContainer" type="MarginContainer" parent="HomeMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HomeMenuContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="HomeMenuContainer/ContentContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "RUN"
uppercase = true

[node name="TitleLLabel2" type="Label" parent="HomeMenuContainer/ContentContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 180
text = "NEXUS"
uppercase = true

[node name="optionsMainMenuContainer" type="VBoxContainer" parent="HomeMenuContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="HomeMenuContainer/ContentContainer/optionsMainMenuContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "PLAY "
alignment = 2

[node name="toggleOptionMenuButton" type="Button" parent="HomeMenuContainer/ContentContainer/optionsMainMenuContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "OPTIONS "
alignment = 2

[node name="ExitButton" type="Button" parent="HomeMenuContainer/ContentContainer/optionsMainMenuContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "EXIT "
alignment = 2

[node name="OptionMenuContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 1281.0
offset_bottom = 722.0

[node name="ColorRect" type="ColorRect" parent="OptionMenuContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="PauseTitle" type="MarginContainer" parent="OptionMenuContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="OptionMenuTitle" type="Label" parent="OptionMenuContainer/PauseTitle"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "O P T I O N S"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="OptionMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenuContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="toggleSettinngButton" type="Button" parent="OptionMenuContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "SETTINGS"

[node name="toggleHomeControlsMenuButton" type="Button" parent="OptionMenuContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "CONTROLS"

[node name="toggleOptionMenuButton" type="Button" parent="OptionMenuContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "BACK"

[node name="inGameUI" type="MarginContainer" parent="."]
offset_left = 3.0
offset_right = 1280.0
offset_bottom = 722.0

[node name="VBoxContainer" type="VBoxContainer" parent="inGameUI"]
layout_mode = 2
theme_override_constants/separation = 570

[node name="leftCornerContainer" type="HBoxContainer" parent="inGameUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="pauseButtonContainer" type="MarginContainer" parent="inGameUI/VBoxContainer/leftCornerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="togglePauseMenuButton" type="Button" parent="inGameUI/VBoxContainer/leftCornerContainer/pauseButtonContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "PAUSE"

[node name="MarginContainer" type="MarginContainer" parent="inGameUI/VBoxContainer/leftCornerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 15

[node name="RestartButton" type="Button" parent="inGameUI/VBoxContainer/leftCornerContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "RESTART"

[node name="BottomDistanceContainer" type="MarginContainer" parent="inGameUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="inGameUI/VBoxContainer/BottomDistanceContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "DISTANCE LEFT:"

[node name="PauseMenuScreen" type="MarginContainer" parent="."]
visible = false
offset_left = 3.0
offset_right = 1280.0
offset_bottom = 722.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenuScreen"]
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="PauseTitle" type="MarginContainer" parent="PauseMenuScreen"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Label" type="Label" parent="PauseMenuScreen/PauseTitle"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "P A U S E D"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenuScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuScreen/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="togglePauseMenuButton" type="Button" parent="PauseMenuScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "RESUME"

[node name="toggleSettinngButton" type="Button" parent="PauseMenuScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "SETTINGS"

[node name="toggleControlsMenuButton" type="Button" parent="PauseMenuScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "CONTROLS"

[node name="RestartButton" type="Button" parent="PauseMenuScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "RESTART"

[node name="QuitButtom" type="Button" parent="PauseMenuScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "QUIT"

[node name="ControlsMenuContainer" type="MarginContainer" parent="."]
visible = false
offset_left = 3.0
offset_right = 1280.0
offset_bottom = 722.0

[node name="ColorRect" type="ColorRect" parent="ControlsMenuContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.490196)

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenuContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ControlsMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="toggleControlsMenuButton" type="Button" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "RETURN"

[node name="Label" type="Label" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 80
text = "CONTROLS: HOW TO PLAY"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "JFeugnvrv
JVDnvijvrnvijv rihb ivn ejb wojrnb
fdvnrvbrvbrvnrvnrvjirnvjf vfjobn b 
fivhbfvubvibnrihbrbrhibrhirbvrfbir
fvvrfgre

bhvbrvbr
vfdbnfivbribnrifbrhbrignrig
fvborgirngiwrbrwvnwr
 udnvourbnvruvb

dvbvbv
fdvbvbrofgnbouvbdsjov
dfovnovnbouvnruogvnrorbn

dfnvfovnrgovb
duvnduovndovnov ndovb dfjob 
vdovndfjovndfonvvodvndov dov"
justification_flags = 131
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="ControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="HomeToControlsMenuContainer" type="MarginContainer" parent="."]
visible = false
offset_left = 3.0
offset_right = 1280.0
offset_bottom = 722.0

[node name="ColorRect" type="ColorRect" parent="HomeToControlsMenuContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.490196)

[node name="VBoxContainer" type="VBoxContainer" parent="HomeToControlsMenuContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="toggleHomeControlsMenuButton" type="Button" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "RETURN"

[node name="Label" type="Label" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 80
text = "CONTROLS: HOW TO PLAY"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "JFeugnvrv
JVDnvijvrnvijv rihb ivn ejb wojrnb
fdvnrvbrvbrvnrvnrvjirnvjf vfjobn b 
fivhbfvubvibnrihbrbrhibrhirbvrfbir
fvvrfgre

bhvbrvbr
vfdbnfivbribnrifbrhbrignrig
fvborgirngiwrbrwvnwr
 udnvourbnvruvb

dvbvbv
fdvbvbrofgnbouvbdsjov
dfovnovnbouvnruogvnrorbn

dfnvfovnrgovb
duvnduovndovnov ndovb dfjob 
vdovndfjovndfonvvodvndov dov"
justification_flags = 131
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_7tgkg")
expand_mode = 1
stretch_mode = 4

[connection signal="pressed" from="HomeMenuContainer/ContentContainer/optionsMainMenuContainer/toggleOptionMenuButton" to="." method="_on_toggle_option_menu_button_pressed"]
[connection signal="pressed" from="OptionMenuContainer/MarginContainer2/VBoxContainer/toggleHomeControlsMenuButton" to="." method="_on_toggle_home_controls_menu_button_pressed"]
[connection signal="pressed" from="OptionMenuContainer/MarginContainer2/VBoxContainer/toggleOptionMenuButton" to="." method="_on_toggle_option_menu_button_pressed"]
[connection signal="pressed" from="inGameUI/VBoxContainer/leftCornerContainer/pauseButtonContainer/togglePauseMenuButton" to="." method="_on_toggle_pause_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuScreen/MarginContainer2/VBoxContainer/togglePauseMenuButton" to="." method="_on_toggle_pause_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuScreen/MarginContainer2/VBoxContainer/toggleControlsMenuButton" to="." method="_on_toggle_controls_menu_button_pressed"]
[connection signal="pressed" from="ControlsMenuContainer/VBoxContainer/HBoxContainer2/MarginContainer/toggleControlsMenuButton" to="." method="_on_toggle_controls_menu_button_pressed"]
[connection signal="pressed" from="HomeToControlsMenuContainer/VBoxContainer/HBoxContainer2/MarginContainer/toggleHomeControlsMenuButton" to="." method="_on_toggle_home_controls_menu_button_pressed"]
